--- a/style.css
+++ b/style.css
@@ -394,10 +394,10 @@ img {
     border: 0;
     border-radius: 10px;
     top: 50%;
-    left: 50%;
+    left: 25%;
     padding: 10px;
-    background-color: black;
-    color: whitesmoke;
+    background-color: rgb(217, 255, 0);
+    color: black;
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     transform: translate(-50%, -50%);
@@ -414,6 +414,32 @@ img {
     opacity: 1;
 }
 .work__img .but:hover{
+    background-color: whitesmoke;
+    color: black;
+    font-weight: bold;
+}
+.buts{
+    position: absolute;
+    border: 0;
+    border-radius: 10px;
+    top: 50%;
+    right: -1%;
+    padding: 10px;
+    background-color: rgba(0, 162, 255, 0.59);
+    color: black;
+    font-weight: bold;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    z-index: 1; /* Ensure the button is above the image */
+ 
+}
+.work__img:hover .buts,
+.buts:hover {
+    opacity: 1;
+}
+.work__img .buts:hover{
     background-color: whitesmoke;
     color: black;
     font-weight: bold;
